# commit-dude

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  tests.yml
commit_dude/: __main__.py  cli.py  config.py  errors.py  factory.py  llm.py  schemas.py  settings.py  utils.py
commit_dude/cli/: __init__.py  controller.py  main.py  service.py
commit_dude/core/: factory.py
commit_dude/core/middleware/: __init__.py  pattern_detector_middleware.py
tests/: test_cli.py  test_errors.py  test_llm.py  test_schemas.py
tests/evaluation/: test_commit_dude_llm_judge.py
tests/unit/: test_cli.py  test_commit_message_wrapping.py  test_errors.py  test_llm.py  test_schemas.py  test_utils.py
