[project]
name = "commit-dude"
version = "0.1.2"
description = "CLI that generates Conventional Commits from git diffs using LangChain + OpenAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "click>=8.0.0",
    "pyperclip>=1.8.0",
    "python-dotenv>=1.0.0",
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pydantic>=2.12.4",
]

[project.scripts]
commit-dude = "commit_dude.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commit_dude"]

[tool.pytest.ini_options]
addopts = "--cov=commit_dude --cov-report=term-missing"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
